--- a/styles.css
+++ b/styles.css
@@ -2,32 +2,27 @@ body, html {
     height: 100%;
     font-family: "Inconsolata", "Arial", sans-serif;
     text-align: center;
+    background: #EDEDED;
 }
 
-.bgimg, .container, .logo-img-title-container, .input-details, .checkbox-group label, .logo-container, button {
-    display: inherit;
+.container, .logo-img-title-container, .input-details, .checkbox-group label, .logo-container, button {
+    display: flex;
     justify-content: center;
-    padding: 0.5em 1em;
-    margin: 0.5em;
     border: 1px solid #999999;
     border-radius: 5px;
     width: fit-content;
-}
-
-.bgimg {
-    background: url("background.jpg") no-repeat center center;
-    background-size: cover;
-    min-height: 70%;
 }
 
 .container {
     max-height: calc(100% - 50px);
 }
 
-.logo-img-title-container, .input-details, .checkbox-group label, .logo-container {
-    flex-direction: column; 
+.logo-img-title-container, .logo-container {
+    flex-direction: row; 
 }
-
+.input-details, .checkbox-group label {
+    flex-direction: column;
+}
 .checkbox-group input[type="checkbox"] {
     display: none;
 }
@@ -38,40 +33,15 @@ body, html {
     border-color: #007bff;
 }
 
-.logo1, .logo2, .thumbnail {
+.logo1, .logo2 {
     flex: 1;
     max-width: 100%;
     max-height: 100px;
-    width: auto;
-    height: auto;
     background-color: rgba(255, 255, 255, 0.60);
     padding: 1px;
     border-radius: 15px;
     margin: 10px;
     object-fit: contain;
-}
-
-.thumbnail {
-    margin: 0px;
-}
-
-.text-container {
-    text-align: center;
-    width: 100%;
-    max-width: 1000px;
-}
-
-.text-container span {
-    font-size: calc(1vw + 1vh + 1vmin);
-    color: white;
-}
-
-body {
-    background: #EDEDED;
-}
-
-#csvGallery, .thumbnail {
-    display: block;
 }
 
 .thumbnail {
@@ -88,10 +58,7 @@ body {
     background-color: lightgreen;
 }
 
-input[type=text],
-input[type=datetime-local],
-input[type=number] {
-    max-width: 375px;
+input[type=text], input[type=datetime-local], input[type=number] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -102,9 +69,7 @@ input[type=number] {
     text-align: center;
 }
 
-input[type=text]:focus,
-input[type=datetime-local]:focus,
-input[type=number]:focus {
+input[type=text]:focus, input[type=datetime-local]:focus, input[type=number]:focus {
     border: 5px solid #555;
 }
 
@@ -188,8 +153,7 @@ label {
     background-color: #3496a0;
 }
 
-.cart:hover,
-.cart:active {
+.cart:hover, .cart:active {
     right: 0;
     height: 450px;
     transition: all 0.5s ease;
@@ -208,8 +172,7 @@ label {
     transition: height 0.5s ease-in-out;
 }
 
-.cart:hover .cart-items,
-.cart:active .cart-items {
+.cart:hover .cart-items, .cart:active .cart-items {
     display: block;
 }
 
@@ -255,6 +218,126 @@ label {
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
+
 #durationInput {
-    width: 58%;
+    flex: 1;
+    margin-right: 10px;
+}
+
+#durationType {
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+    border: none;
+    background-color: #f0f0f0;
+    color: #333;
+    padding: 10px 20px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+
+#durationType:hover, #durationType:active, #durationType:focus {
+    background-color: #e0e0e0;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.switch-label {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 14px;
+    transition: .4s;
+}
+
+.switch-label.hours {
+    left: 10px;
+}
+
+.switch-label.days {
+    right: 10px;
+    opacity: 0;
+}
+
+input:checked + .slider .switch-label.hours {
+    opacity: 0;
+}
+
+input:checked + .slider .switch-label.days {
+    opacity: 1;
+}
+
+#searchAndFilterContainer {
+    outline: 2px solid #000000;
+}
+
+.input-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#durationInput {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.switch {
+    flex: 0;
+}
+
+.input-wrapper {
+    display: flex;
+    flex-direction: row; /* This will arrange the label and the input or switch in a row */
+    box-sizing: border-box;
+}
+
+.input-wrapper > * {
+    flex: 1; /* This will make the children of .input-wrapper share the space equally */
 }
